--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
+    "react-easy-print": "^0.6.0",
     "react-jsonschema-form": "^1.6.1",
     "react-number-format": "^4.0.8",
     "react-redux": "^7.0.3",
